@@ -78,6 +78,12 @@ use_strict_host_authorization = 0
 # convert authenticated username by regular expression
 #make_auth_replace_regex = s/^(.*?)@.*/$1/gmx
 
+# Allow specific hosts to bypass the csrf protection which
+# requires a generated token to submit certain post requests,
+# for example sending commands. Wildcards are allowed.
+csrf_allowed_hosts=127.0.0.1
+csrf_allowed_hosts=::1
+
 ######################################
 # location of your cgi.cfg
 cgi.cfg             = cgi.cfg
@@ -336,7 +342,6 @@ show_modified_attributes = 1
 # Show check attempts for hosts too. The default is to show
 # them on the problems page only. Use this value to force a value.
 #show_host_attempts = 1
-
 
 ######################################
 # Command Settings
